# agentia

./: .dockerignore  .gitignore  Dockerfile  NEXT-STEPS.md  NEXT.md  README.md  SPEC-007-memory-test.md  agentia  agentia-agent  constants.py  provision.py  pyproject.toml  test_imports.py  test_moderator_e2e.py
adapters/: __init__.py  openclaw.py
agent_runtime/: __init__.py  harness.py  server.py
agent_side/: __init__.py  config.py  harness.py  server.py
agents/: __init__.py
cli/: agent.py  host.py
containers/: Dockerfile  start_agents.py
dev/: test_imports.py  test_moderator_e2e.py
examples/: moderator.py
harnesses/: agent_entrypoint.sh  entrypoint.sh  gateway_harness.py  inbox_poller.py  inbox_poller_harness.py  interactive_harness.py  ipc_harness.py  multi_turn_harness.py  single_harness.py  start_agents.py
observability/: __init__.py  logger.py  session.py  session_trace.py
relay/: __init__.py  base.py  exec_relay.py  inbox.py  inbox_relay.py  moderator.py  websocket_relay.py
research/: 01-framework-survey.md  02-literature-review.md  03-comparative-evaluation.md  04-synthesis-recommendations.md  05-openclaw-hidden-harnesses.md  06-agents-current-state.md  07-schema-options.md  08-participation-evaluator-options.md  09-integration-analysis.md  10-final-options.md
review/: 2026-04-10-audit.md  FINAL-REVIEW.md  MANIFEST.md  subagent-02-adapters.md  subagent-04-cli.md  subagent-05-setup.md
reviews/: arch-review.md  cli-review.md  code-quality-review.md  consistency-review.md  integration-test-report.md
setup/: README.md  setup-docker.sh  (+1 more)
(+86 files in other folders)
